<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:paddingLeft="5dp" android:paddingRight="5dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <EditText android:gravity="top" android:id="@+id/commentText" android:layout_width="match_parent" android:layout_height="120dp"/>
        <CheckBox android:id="@+id/addTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/autoAddTitle"/>
        <CheckBox android:id="@+id/addPageNo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/autoAddPageNo"/>
        <LinearLayout android:layout_gravity="bottom" android:paddingTop="5dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@android:string/cancel" android:layout_weight="1"/>
            <Button android:id="@+id/post" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/post" android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
